# openmp-emboss

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  performance-results.dice.png.txt  performance-results.txt  task.cpp
